--- a/v401/content/auswertung.tex
+++ b/v401/content/auswertung.tex
@@ -46,6 +46,6 @@ Die Messwerte zur Bestimmung des Brechungsindex von Luft sind ebenfalls in \auto
 Die Länge der Messzelle, in welcher der Unterdruck erzeugt wird, lautet $b = \qty{5}{\centi\metre}$. Mit der Laserwellenlänge $\lambda = \qty{635}{\nano\metre}$ folgt aus
 \autoref{eqn:Delta_n} die Änderung des Brechungsindex $\symup{\Delta}n = \num{0.000179+-0.000027}$. Diese kann wiederum in \autoref{eqn:Brechungsindex} eingesetzt werden um den
 Brechungsindex bei Normalbedingungen ($p_0 = \qty{1013.25}{\hecto\pascal}$, $T_0 = \qty{273.15}{\kelvin}$) zu erhalten. Die Messtemperatur $T$ wird als 
-$T = \qty{295.15}{\kelvin} = \qty{22}{\celsius}$ angenommen, ebenso wird $p = p_0$ für den Luftdruck während der Messung verwendet. Die Druckänderung wurde im Experiment zu 
-konstant $p' = \qty{0.6}{\bar} = \qty{60}{\kilo\pascal}$ eingestellt. Mit diesen Werten lässt sich aus \autoref{eqn:Brechungsindex} der Brechungsindex
-$n = \num{1.000474+-0.000072}$ ermitteln.
+$T = \qty{295.15}{\kelvin} = \qty{22}{\celsius}$ angenommen, ebenso wird $p = p_0$ für den Luftdruck während der Messung verwendet. Die Druckänderung wurde im Experiment so 
+gewählt, dass immer der gleiche Druck $p' = \qty{41325}{\pascal}$ erreicht wurde (Unterdruck von $-\qty{0.6}{\bar}$). Mit diesen Werten lässt sich aus \autoref{eqn:Brechungsindex} 
+der Brechungsindex $n_\text{Luft} = \num{1.000326+-0.00005}$ ermitteln.
