--- a/v401/content/durchfuehrung.tex
+++ b/v401/content/durchfuehrung.tex
@@ -19,7 +19,7 @@ Lichtwechsel registrieren und in ein Zählsignal umwandeln.
 \label{subsec:Laser_Wellenlaenge}
 Zur experimentellen Bestimmung der Wellenlänge des verwendeten Lasers wird ein Bereich von $5$ bist $\qty{10}{\milli\metre}$ mit der motorgetriebenen Stellschraube 
 abgeschritten. Die Drehzahl des Elektromotors wird auf Stufe $1$ eingestellt. Es werden $10$ Messwerte der Zählraten der Photokathode festgestellt, indem
-der oben geannte Messbereich jeweils ein Mal durchschritten wird. Der Zähler der Photokathode wird vor jeder Messung auf $0$ gestellt.
+der oben genannte Messbereich jeweils ein Mal durchschritten wird. Der Zähler der Photokathode wird vor jeder Messung auf $0$ gestellt.
 Es ist zu beachten, dass die Stellschraube an einem Hebel mit dem Untersetzungsverhältnis $u = 1:5.046$ wirkt. 
 Aus den gewonnenen Messwerten lässt sich ein Mittelwert bilden, aus dem ein experimenteller Wert der Wellenlänge des Lasers folgt.
 
