--- a/v401/content/anhang.tex
+++ b/v401/content/anhang.tex
@@ -1,16 +1,11 @@
 \newpage
 
 \section*{Anhang}
-
+\addcontentsline{toc}{section}{Anhang}
 
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 1, scale=0.75]{content/MessdatenV401.pdf}
 \end{figure}
 
 \newpage
-
-\begin{figure}
-    \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
-\end{figure}
