--- a/v401/content/diskussion.tex
+++ b/v401/content/diskussion.tex
@@ -1,6 +1,6 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Im ersten Teil des Versuches wurde mit Hilfe eines Michelson-Interferometers die Wellenlänge eines Laser bestimmt. Dabei ergaben sich die Schwierigkeiten, dass die Photokathode 
+Im ersten Teil des Versuches wurde mithilfe eines Michelson-Interferometers die Wellenlänge des verwendeten Lasers bestimmt. Dabei ergaben sich die Schwierigkeiten, dass die Photokathode 
 nicht von der Umgebung abgeschirmt gewesen ist. Daher können äußere Schatten zu einer erhöhten Zählrate führen. Außerdem kann es geschehen, dass aufgrund der 
 Motorgeschwindigkeit die Photokathode nicht alle Maxima registriert und somit die Zählrate leicht abweicht. 
 Die Wellenlänge des Lasers wurde zu $\lambda_\text{exp} = \qty{661 +- 5}{\nano\metre}$ bestimmt. Nach Angabe des Herstellers soll der Laser eine Wellenlänge von
@@ -11,13 +11,14 @@ Daher ergibt sich gemäß
 \end{equation*}
 eine Abweichung der Wellenlänge von $\Delta\lambda = 4.05\%$.
 
-Im zweiten Teil des Versuches sollte mit dem selben Aufbau der Brechungsindex von Luft bestimmt werden. Bei dieser Messung liegen mögliche Quellen für Abweichungen in der Dichte
-der Apparatur. Außerdem kann durch händisches Pumpen nicht bei jeder Messung der gleiche Druck eingestellt werden. Ebenfalls gelten die Formeln zur Berechnung des Brechungsindex
-nur genähert für ideale Gase unter Normalbedingungen, weshalb eine Abweichung auftreten muss. Hinzu kommen ebenfalls die selben Fehlerquellen des ersten 
+Im zweiten Teil des Versuches sollte mit demselben Aufbau der Brechungsindex von Luft bestimmt werden. Bei dieser Messung liegen mögliche Quellen für Abweichungen in der Dichtheit
+der Apparatur. Außerdem kann durch händisches Pumpen nicht bei jeder Messung der exakt gleiche Druck eingestellt werden. Ebenfalls gelten die Formeln zur Berechnung des Brechungsindex
+nur genähert für ideale Gase unter Normalbedingungen, weshalb eine Abweichung auftreten muss. Hinzu kommen ebenfalls dieselben Fehlerquellen des ersten 
 Teils des Versuches.
-Der Brechungsindex von Luft wurde mit diesem Experiment zu $n_\text{Luft} = 1.000474 \pm 0.000072$ bestimmt. Da kein Brechungsindex mit den verwendeten Bedinungen in der 
-Literatur gefunden werden kann, lässt sich lediglich sagen, dass der experimentell bestimmte Wert in eine realistischen Größenordnung liegt und somit als qualitativ
-angenommen werden kann.
+Der Brechungsindex von Luft wurde in diesem Experiment zu $n_\text{Luft} = \num{1.000326+-0.00005}$ bestimmt.
+Der Brechungsindex von Luft unter Normbedingungen beträgt typischer Weise $n_\text{Luft} = 1,00021 ... 1,00029$ \cite{Ingenieurwissen}. 
+Der experimentell ermittelte Wert weicht demnach geringfügig ab, was allerdings mit statistischen Schwankungen und den nicht exakt bestimmten vorherrschenden
+Umgebungsbedingungen (Raumtemperatur und Druck) begründet werden kann.
 
-Die geringe Abweichung im ersten Versuch deutet auf die hohe Präzesion des Michelson-Interferometers hin. Die Abweichung liegen vermutlich eher an der Photokathode und den 
-äußeren Einflüssen. 
+Die geringe Abweichung im ersten Versuchsteil deutet auf die hohe Präzesion des Michelson-Interferometers hin. Allgemein sind eher äußere Einflüsse und statistische Schwankungen
+Ursachen der Abweichung der experimentellen Werte. 
