passt feddig abschicken außerdem nervt mich grad eine scheiß fliege beim schreiben

--- a/v401/content/durchfuehrung.tex
+++ b/v401/content/durchfuehrung.tex
@@ -5,7 +5,7 @@ Vor Beginn der Messung muss das Interferometer so eingestellt werden, dass eine 
 Bei eingeschaltetem Laser wird mithilfe der beiden manuell justierbaren Stellschrauben des rechten Spiegels die vertikale und horizontale
 Position des Spiegels so eingestellt, dass der auslaufende Lichtstrahl die Linse des Photoelements möglichst genau trifft. Dabei müssen die beiden Teilstrahlen
 des Lasers sich überlagern und parallel zueinander verlaufen. Die Stellschraube der vertikalen Justierung wird so eingestellt, dass ein Interferenzmuster
-mit möglichst breiten Minima/Maxima entsteht. Wird nun die vom Motor angetriebene Stellschraube gedreht, kann die Photokathode die Interferenz-bedingten
+mit möglichst breiten Minima/Maxima entsteht. Wird nun die vom Motor angetriebene Stellschraube gedreht, kann die Photokathode die interferenzbedingten
 Lichtwechsel registrieren und in ein Zählsignal umwandeln.
 
 \begin{figure}
@@ -17,7 +17,7 @@ Lichtwechsel registrieren und in ein Zählsignal umwandeln.
 
 \subsection{Bestimmung der Wellenlänge des Lasers}
 \label{subsec:Laser_Wellenlaenge}
-Zur experimentellen Bestimmung der Wellenlänge des verwendeten Lasers wird ein Bereich von $5$ bist $\qty{10}{\milli\metre}$ mit der motorgetriebenen Stellschraube 
+Zur experimentellen Bestimmung der Wellenlänge des verwendeten Lasers wird ein Bereich von $5$ bis $\qty{10}{\milli\metre}$ mit der motorgetriebenen Stellschraube 
 abgeschritten. Die Drehzahl des Elektromotors wird auf Stufe $1$ eingestellt. Es werden $10$ Messwerte der Zählraten der Photokathode festgestellt, indem
 der oben genannte Messbereich jeweils ein Mal durchschritten wird. Der Zähler der Photokathode wird vor jeder Messung auf $0$ gestellt.
 Es ist zu beachten, dass die Stellschraube an einem Hebel mit dem Untersetzungsverhältnis $u = 1:5.046$ wirkt. 
