--- a/v401/content/theorie.tex
+++ b/v401/content/theorie.tex
@@ -30,10 +30,10 @@ Nullstellen des Cosinus auch verschwinden.
 \subsection{Kohärenz}
 \label{subsec:Kohärenz}
 Wird nun angenommen, dass alle e-m-Wellen miteinander interferieren, sollte die Wahrnehmung unserer Umwelt wesentlich anders aussehen. Zum Beispiel wird in der Natur nahezu 
-nie destruktive Interferenz beobachtet. Daher ist es naheliegend, dass es eine weitere Bedingung für Interferenzeffekte geben muss. Diese Bedingung nennt man Kohärenz. 
+nie destruktive Interferenz beobachtet. Daher ist es naheliegend, dass es eine weitere Bedingung für Interferenzeffekte geben muss. Diese Bedingung wird Kohärenz genannt. 
 Eine wichtige Eigenschaft der Kohärenz ist, dass die Phasenkonstanten $\delta_{1,2}$ in der Natur meist komplex zeitabhängig sind. Die komplexe Zeitabhängigkeit liegt der 
 Entstehung des Lichtes zu Grunde. Daher ergibt sich bei einer Betrachtung mehrerer Lichtquellen über ein geeignet langes Zeitintervall, dass der Interferenzterm im zeitlichen 
-Mittel verschwindet. Es kann keine Interferenz unter dieser Bedingung festgestellt werden. Solches Licht wird inkohörent genannt. 
+Mittel verschwindet. Es kann keine Interferenz unter dieser Bedingung festgestellt werden. Solches Licht wird inkohärent genannt. 
 
 Interferenz kann daher nur bei kohärenten Licht beobachtet werden. Kohärentes Licht hat die Eigenschaft, dass das Licht aller Quellen durch eine einheitliche Wellengleichung 
 mit festen $k, \omega$ und $\delta$ beschrieben werden kann. Außerdem gilt, wenn ein Wellenzug endlicher Länge untersucht wird, eine weitere Bedingung für Interferenz. 
