--- a/v401/content/theorie.tex
+++ b/v401/content/theorie.tex
@@ -98,7 +98,7 @@ Damit kann nun die Änderung des Brechungsindex durch
     \Delta n(p,p') = \frac{f}{2}N_\text{L}\frac{T_0}{p_0}\frac{1}{T}(p - p')
 \end{equation*}
 bestimmt werden.
-Betrachtet man den Brechungsindex nun unter Normalbedingungen lautet der Brechungsindex 
+Wird der Brechungsindex nun unter Normalbedingungen betrachtet, ergibt sich dieser zu 
 \begin{equation}
     \label{eqn:Brechungsindex}
     n(p_0, T_0) = 1 + \Delta n(p,p')\frac{T}{T_0}\frac{p_0}{p - p'}.
