durchführung fertig du spast\ ich arbeite in hast\ falle dir trotzdem zu last\ und komme bald in den knast

--- a/lit.bib
+++ b/lit.bib
@@ -153,3 +153,10 @@
 	urldate      = {2022-05-17},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933350/mod_resource/content/2/V401.pdf},
 }
+
+@online{v407,
+	title        = {V407 - Fresnelsche Formeln},
+	organization = {TU Dortmund},
+	urldate      = {2022-05-24},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977241/mod_resource/content/2/V407.pdf},
+}
