juckt nicht im Gegensatz zu Affenpocken :monkey_face:

--- a/v504/content/theorie.tex
+++ b/v504/content/theorie.tex
@@ -103,6 +103,6 @@ berechnen. Für die \textit{Stefan-Boltzmannkonstante} gilt $\sigma = \qty{5.7e-
 der Kathode. Wenn die Wärmeleistung $N_\text{WL}$ der Kathode bekannt ist, ergibt sich mit der zugeführten Leistung $N_\text{zu} = U \cdot I$ die Bilanz
 \begin{equation}
     \label{eqn:Leistung}
-    U \cdot I = f \eta \sigma T^4 - N_\text{WL}
+    U \cdot I = f \eta \sigma T^4 + N_\text{WL}
 \end{equation} 
 für die Leistungen der Kathode, woraus sich die Temperatur $T$ der Kathode bestimmen lässt.
