--- a/v407/content/diskussion.tex
+++ b/v407/content/diskussion.tex
@@ -1,2 +1,27 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+
+In diesem Versuch wurde wurde der Brechungsindex eines Silizium-Spiegels mit einem Aufbau, welcher im Abschnitt \ref{sec:Durchführung} beschrieben wurde, bestimmt. 
+Dies ist über drei Methode geschehen. Die errechneten Brechungsindizes wreden in \autoref{tab:Indizes_dis} erneut dargestellt. Außerdem wird ein Literaturwert für einen idealen
+Silizium-Spiegel angegeben. Nach Betrachtung der Tabelle fällt auf, dass die berechneten Brechungsindizes alle in der Größenordnung des Literaturwertes liegen, allerdings 
+weichen sie jeweils um einen nicht vernachlässigbaren Wert vom Literaturwert ab. Dies liegt vermutlich an dem verwendetem Spiegel. Der Literaturwert gilt lediglich für 
+einen perfekten Silizium-Spiegel, was der verwendete Spiegel nicht ist. Durch Verunreinigung, Abnutzung und weitere äußere Effekte liegen keine idealen Bedingung vor, 
+weshalb eine Abweichung vom Literaturwert zu erwarten war. Aus diesem Grund wird auf die Berechnung der Abweichungen verzichtet, denn diese träfen keine Aussagen über die
+Qualität der Messmethode, sondern demonstrieren lediglich die im imperfekten Bedingung der Messung. Allerdings fließt in die Abweichung der Werte ebenfalls mit ein, dass alle
+Einstellungen der Messapparatur händisch vorgenommen wurden, weshalb gleiche Bedingungen bei jeder Messung nicht gewährleistet werden können. 
+
+Wie bereits diskutiert ist der Literaturwert des Brechungsindizes nicht aussagekräftig für die realen Materialien des Versuches. Daher ist anzunehmen, dass die berechneten 
+Wert die realen Bedingungen, im Rahmen der allgemeinen Messunsicherheit, relativ gut beschreiben.
+
+\begin{table}
+    \centering
+    \caption{In dieser Tabelle werden die einzelnen berechneten Brechungsindizes dargestellt.}
+    \label{tab:Indizes_dis}
+    \begin{tabular}{c c c c}
+      \toprule
+        {$n_\text{p}$} & {$n_\text{s}$} & {$n_{\alpha_\text{p}}$} & {$n_\text{Lit}$} \\
+        \midrule
+        $3.98 \pm 0.15$ & $3.85 \pm 0.30$ & 3.73 & 3.35 \\
+      \bottomrule
+    \end{tabular}
+  \end{table}
